# rps

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml
configs/: agent.toml  controller.toml  docker-agent.toml  docker-controller.toml
crates/rps-agent/: Cargo.toml
crates/rps-agent/src/: main.rs
crates/rps-controller/: Cargo.toml
crates/rps-controller/src/: bridge.rs  db.rs  main.rs  policy.rs  proxy_http.rs  proxy_manager.rs  proxy_socks5.rs  proxy_tcp.rs  proxy_udp.rs  traffic.rs  tunnel_manager.rs  web.rs
crates/rps-core/: Cargo.toml
crates/rps-core/src/: config.rs  lib.rs  net.rs  noise.rs  protocol.rs
crates/rps-loadtest/: Cargo.toml
crates/rps-loadtest/src/: main.rs
crates/rps-mux/: Cargo.toml
crates/rps-mux/src/: frame.rs  lib.rs  session.rs
crates/rps-test-target/: Cargo.toml
crates/rps-test-target/src/: main.rs
docker/: Dockerfile.agent  Dockerfile.controller  Dockerfile.loadtest  Dockerfile.test-target
docs/: deploy-ghcr.md  rps-docker-limit-report.md  rps-docker-socks5udp-report.md  rps-docker-throughput-report.md  rps-mvp-design.md
scripts/: publish-ghcr.sh
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.vue  api.ts  auth.ts  router.ts  style.css  types.ts
web/src/components/: PageHeader.vue  Sidebar.vue  StatusBadge.vue
web/src/pages/: ClientsPage.vue  DashboardPage.vue  LoginPage.vue  PlaceholderPage.vue  ProxyPage.vue  TunnelsPage.vue
