[workspace]
members = [
    "crates/rps-core",
    "crates/rps-mux",
    "crates/rps-controller",
    "crates/rps-agent",
    "crates/rps-test-target",
    "crates/rps-loadtest",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
axum = "0.8"
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
futures-core = "0.3"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
snow = "0.9"
socket2 = "0.5"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
