[package]
name = "rps-controller"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
clap.workspace = true
dashmap.workspace = true
futures-core.workspace = true
hmac.workspace = true
rps-core = { path = "../rps-core" }
rps-mux = { path = "../rps-mux" }
serde = { workspace = true }
serde_json.workspace = true
sha1.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
