[package]
name = "rps-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
snow.workspace = true
socket2.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
